--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -69,7 +69,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">AMIMUN Club</a>
