--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
-              alt=""
-            />
+            <img class="container-fluid" src="./static/img-5.jpeg" alt="" />
 
             <div class="container">
               <div class="carousel-caption text-start">
@@ -118,7 +115,8 @@
           </div>
           <div class="carousel-item">
             <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
+              class="container-fluid"
+              src="./static/img-4.jpeg"
               alt=""
             />
 
@@ -140,7 +138,8 @@
           </div>
           <div class="carousel-item">
             <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
+            class="container-fluid"
+              src="./static/img-1.jpeg"
               alt=""
             />
             <div class="container">
@@ -204,20 +203,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+           <img src="./static/img-2.JPG" alt="">
           </div>
         </div>
 
@@ -237,20 +223,7 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+             <img src="./static/img-6.jpeg" alt="">
           </div>
         </div>
 
@@ -269,20 +242,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+            <img src="./static/img-3.JPG" alt="">
           </div>
         </div>
 
