--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="container-fluid" src="./static/img-5.jpeg" alt="" />
+            <img
+              src="https://source.unsplash.com/user/erondu/1900x500"
+              alt=""
+            />
 
             <div class="container">
               <div class="carousel-caption text-start">
@@ -115,8 +118,7 @@
           </div>
           <div class="carousel-item">
             <img
-              class="container-fluid"
-              src="./static/img-4.jpeg"
+              src="https://source.unsplash.com/user/erondu/1900x500"
               alt=""
             />
 
@@ -138,8 +140,7 @@
           </div>
           <div class="carousel-item">
             <img
-            class="container-fluid"
-              src="./static/img-1.jpeg"
+              src="https://source.unsplash.com/user/erondu/1900x500"
               alt=""
             />
             <div class="container">
@@ -203,7 +204,20 @@
             </p>
           </div>
           <div class="col-md-5">
-           <img src="./static/img-2.JPG" alt="">
+            <svg
+              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+              width="500"
+              height="500"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder: 500x500"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#eee"></rect>
+              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+            </svg>
           </div>
         </div>
 
@@ -223,7 +237,20 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-             <img src="./static/img-6.jpeg" alt="">
+            <svg
+              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+              width="500"
+              height="500"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder: 500x500"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#eee"></rect>
+              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+            </svg>
           </div>
         </div>
 
@@ -242,7 +269,20 @@
             </p>
           </div>
           <div class="col-md-5">
-            <img src="./static/img-3.JPG" alt="">
+            <svg
+              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+              width="500"
+              height="500"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder: 500x500"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect width="100%" height="100%" fill="#eee"></rect>
+              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+            </svg>
           </div>
         </div>
 
