--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">AMITY | AMIMUN '21</a>
         <button
@@ -32,16 +32,16 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse justify-content-end navbar-collapse"
+          class="collapse navbar-collapse justify-content-end"
           id="navbarNavDropdown"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="navbar-brand" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="navbar-brand dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -69,21 +69,33 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="committees-gallery.html">Committees</a>
+              <a class="navbar-brand" href="committees-gallery.html"
+                >Committees</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">AMIMUN Club</a>
+              <a class="navbar-brand" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="navbar-brand" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    <!-- timer -->
+    <div id="logo-n-timer-container">
+      <img id="logo" src="./static/logo-header-scaled.png" alt="" />
+      <h1 id="timer"></h1>
+    </div>
+
     <main>
-      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div
+        id="myCarousel"
+        class="carousel slide carousel-test"
+        data-bs-ride="carousel"
+      >
         <ol class="carousel-indicators">
           <li
             data-bs-target="#myCarousel"
@@ -96,10 +108,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
+              width="100%"
+              src="./static/img-2.JPG"
               alt=""
+              class="d-block w-100 img-fluid img-height"
             />
-
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1>Example headline.</h1>
@@ -116,10 +129,13 @@
               </div>
             </div>
           </div>
+
           <div class="carousel-item">
             <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
+              width="100%"
+              src="./static/img-1.jpeg"
               alt=""
+              class="d-block w-100 img-fluid img-height"
             />
 
             <div class="container">
@@ -140,9 +156,12 @@
           </div>
           <div class="carousel-item">
             <img
-              src="https://source.unsplash.com/user/erondu/1900x500"
+              width="100%"
+              src="./static/img-3.JPG"
               alt=""
+              class="d-block w-100 img-fluid img-height"
             />
+
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1>One more for good measure.</h1>
@@ -204,20 +223,11 @@
             </p>
           </div>
           <div class="col-md-5">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+            <img
+              class="d-block img-fluid"
+              src="./static/img-2-500x500.JPG"
+              alt=""
+            />
           </div>
         </div>
 
@@ -237,20 +247,11 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+            <img
+              class="d-block img-fluid"
+              src="./static/img-6-500x500.jpeg"
+              alt=""
+            />
           </div>
         </div>
 
@@ -269,20 +270,11 @@
             </p>
           </div>
           <div class="col-md-5">
-            <svg
-              class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-              width="500"
-              height="500"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 500x500"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#eee"></rect>
-              <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
+            <img
+              class="d-block img-fluid"
+              src="./static/img-3-500x500.JPG"
+              alt=""
+            />
           </div>
         </div>
 
@@ -294,22 +286,9 @@
         <h1 class="m-5 text-center">OUR COLLABORATIONS</h1>
         <div class="row text-center m-5">
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#777"></rect>
-              <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
+            <img class="d-block img-fluid"" src="./static/sp-1.png" alt="">
 
-            <h2>Heading</h2>
+            <!-- <h2>Heading</h2>
             <p>
               Donec sed odio dui. Etiam porta sem malesuada magna mollis
               euismod. Nullam id dolor id nibh ultricies vehicula ut id elit.
@@ -320,26 +299,13 @@
               <a class="btn btn-secondary" href="#" role="button"
                 >View details »</a
               >
-            </p>
+            </p> -->
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#777"></rect>
-              <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
+            <img class="d-block img-fluid" src="./static/sp-2.png" alt="" />
 
-            <h2>Heading</h2>
+            <!-- <h2>Heading</h2>
             <p>
               Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
               eget lacinia odio sem nec elit. Cras mattis consectetur purus sit
@@ -350,26 +316,13 @@
               <a class="btn btn-secondary" href="#" role="button"
                 >View details »</a
               >
-            </p>
+            </p> -->
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#777"></rect>
-              <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-            </svg>
+            <img class="d-block img-fluid" src="./static/sp-3.png" alt="" />
 
-            <h2>Heading</h2>
+            <!-- <h2>Heading</h2>
             <p>
               Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
               egestas eget quam. Vestibulum id ligula porta felis euismod
@@ -380,7 +333,7 @@
               <a class="btn btn-secondary" href="#" role="button"
                 >View details »</a
               >
-            </p>
+            </p> -->
           </div>
           <!-- /.col-lg-4 -->
         </div>
@@ -399,6 +352,7 @@
         </p>
       </footer>
     </main>
+    <script src="app.js"></script>
     <!-- <div class="container"></div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
