added gallery in nav-links

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div
           class="collapse navbar-collapse justify-content-end"
           id="navbarNavDropdown"
@@ -74,6 +75,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="navbar-brand" href="gallery.html"
+                >Gallery</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="navbar-brand" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
@@ -87,13 +93,13 @@
     <!-- timer -->
     <div id="logo-n-timer-container">
       <img id="logo" src="./static/logo-header-scaled.png" alt="" />
-      <h1 id="timer"></h1>
+      <h1 id="timer" class="text-center"></h1>
     </div>
 
     <main>
       <div
         id="myCarousel"
-        class="carousel slide carousel-test"
+        cl ass="carousel slide carousel-test"
         data-bs-ride="carousel"
       >
         <ol class="carousel-indicators">
