--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -55,21 +55,26 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./register/delegate_register.html"
+                  <a class="dropdown-item" href="./delegate_register.html"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
+                  <a class="dropdown-item" href="./ip_register.html"
                     >IP Application</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../gallery.html"
+                >Gallery</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">AMIMUN Club</a>
