fixed navbar dropdown button

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <main>
       <div
         id="myCarousel"
-        cl ass="carousel slide carousel-test"
+        class="carousel slide carousel-test"
         data-bs-ride="carousel"
       >
         <ol class="carousel-indicators">
@@ -115,7 +115,7 @@
           <div class="carousel-item active">
             <img
               width="100%"
-              src="./static/img-2.JPG"
+              src="./static/new-img-1.jpg"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
@@ -139,7 +139,7 @@
           <div class="carousel-item">
             <img
               width="100%"
-              src="./static/img-1.jpeg"
+              src="./static/new-img-2.jpg"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
@@ -163,7 +163,7 @@
           <div class="carousel-item">
             <img
               width="100%"
-              src="./static/img-3.JPG"
+              src="./static/new-img-3.jpg"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
