added delegates logo in committee-gallery

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -82,25 +82,17 @@
       </div>
     </nav>
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5 bg-light mt-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/un-white.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -119,20 +111,12 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/unw.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -151,20 +135,12 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/aippm-ip.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -184,20 +160,12 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/ip-white.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -216,20 +184,12 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/wto-white.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
@@ -248,20 +208,12 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <svg
-                class="bd-placeholder-img card-img-top"
-                width="100%"
-                height="225"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
-              >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c"></rect>
-                <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              </svg>
+              <img
+                class="d-block img-fluid"
+                style="background-color: coral"
+                src="./delegates-logo/ccc-white.png"
+                alt=""
+              />
               <div class="card-body">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
