--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <h1 class="m-5 text-center">OUR COLLABORATIONS</h1>
         <div class="row text-center m-5">
           <div class="col-lg-4">
-            <img class="d-block img-fluid"" src="./static/sp-1.png" alt="">
+            <img class="d-block img-fluid" src="./static/sp-1.png" alt="">
 
             <!-- <h2>Heading</h2>
             <p>
