--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">AMITY | AMIMUN '21</a>
+        <a class="navbar-brand mx-4" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -94,6 +94,7 @@
                 alt=""
               />
               <div class="card-body">
+                <h3>OK</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
