--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">AMITY | AMIMUN '21</a>
+         <a class="navbar-brand m-3" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,11 +40,11 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navbar-brand" href="#">About Us</a>
+              <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="navbar-brand dropdown-toggle"
+                class="nav-link dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -72,18 +72,18 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="committees-gallery.html"
+              <a class="nav-link" href="committees-gallery.html"
                 >Committees</a
               >
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="gallery.html">Gallery</a>
+              <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="#">AMIMUN Club</a>
+              <a class="nav-link" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="#">Contact Us</a>
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
