--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">AMITY | AMIMUN '21</a>
+        <a class="navbar-brand mx-4" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,11 +38,11 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navbar-brand" href="#">About Us</a>
+              <a class="nav-link text-white" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
-                class="navbar-brand dropdown-toggle"
+                class="nav-link dropdown-toggle text-white"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -70,20 +70,20 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="committees-gallery.html"
+              <a class="nav-link text-white" href="committees-gallery.html"
                 >Committees</a
               >
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="gallery.html"
+              <a class="nav-link text-white" href="gallery.html"
                 >Gallery</a
               >
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="#">AMIMUN Club</a>
+              <a class="nav-link text-white" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" href="#">Contact Us</a>
+              <a class="nav-link text-white" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -115,7 +115,7 @@
           <div class="carousel-item active">
             <img
               width="100%"
-              src="./static/final-1.jpg"
+              src="./static/final-1.png"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
@@ -139,7 +139,7 @@
           <div class="carousel-item">
             <img
               width="100%"
-              src="./static/new-img-2.jpg"
+              src="./static/new-img-2.png"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
@@ -163,7 +163,7 @@
           <div class="carousel-item">
             <img
               width="100%"
-              src="./static/new-img-3.jpg"
+              src="./static/new-img-1.png"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
