changed background color

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid" style=" background-color: #F7ECE2">
        <a class="navbar-brand mx-1" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
         <button
           class="navbar-toggler"
@@ -82,19 +82,19 @@
       </div>
     </nav>
 
-    <div class="album py-5 bg-light mt-5">
-      <div class="container">
+    <div class="album py-5 mt-5" style=" background-color: #F7ECE2">
+      <div class="container" style=" background-color: #F7ECE2">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/un-white.png"
                 alt=""
               />
-              <div class="card-body">
-                <h3>OK</h3>
+              <div class="card-body" style="background-color: #f4f4f4">
+                <h3>General Assembly</h3>
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -114,11 +114,11 @@
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/unw.png"
                 alt=""
               />
-              <div class="card-body">
+              <div class="card-body" style="background-color: #f4f4f4;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -138,11 +138,11 @@
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/aippm-ip.png"
                 alt=""
               />
-              <div class="card-body">
+              <div class="card-body" style="background-color: #f4f4f4;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -163,11 +163,11 @@
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/ip-white.png"
                 alt=""
               />
-              <div class="card-body">
+              <div class="card-body" style="background-color: #f4f4f4;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -187,11 +187,11 @@
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/wto-white.png"
                 alt=""
               />
-              <div class="card-body">
+              <div class="card-body" style="background-color: #f4f4f4;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -211,11 +211,11 @@
             <div class="card shadow-sm">
               <img
                 class="d-block img-fluid"
-                style="background-color: coral"
+                style="background-color: #F5A98C"
                 src="./delegates-logo/ccc-white.png"
                 alt=""
               />
-              <div class="card-body">
+              <div class="card-body" style="background-color: #f4f4f4;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
