--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="carousel-item active">
             <img
               width="100%"
-              src="./static/final-1.png"
+              src="./static/new-img-3.png"
               alt=""
               class="d-block w-100 img-fluid img-height"
             />
