--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -19,7 +19,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
+        <a class="navbar-brand mx-1" href="../index.html"
+          ><img src="../static/amity-logo.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -72,9 +74,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../gallery.html"
-                >Gallery</a
-              >
+              <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">AMIMUN Club</a>
