--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -12,12 +12,12 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>AMIMUN '21</title>
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="../index.html"
           ><img src="../static/amity-logo.png" alt=""
@@ -426,7 +426,7 @@
 
         <hr class="my-4" />
 
-        <button class="w-100 btn btn-primary btn-lg" type="submit">
+        <button class="w-100 btn btn-secondary btn-lg" type="submit">
           Submit
         </button>
       </form>
