added a separate about section and edited home

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -86,7 +86,7 @@
       <div class="container" style=" background-color: #F7ECE2">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
                 style="background-color: #F5A98C"
@@ -111,14 +111,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
                 style="background-color: #F5A98C"
                 src="./delegates-logo/unw.png"
                 alt=""
               />
-              <div class="card-body" style="background-color: #f4f4f4;">
+              <div class="card-body" style="background-color: #fff;">
                 <p class="card-text">
                   This is a wider card with supporting text below as a natural
                   lead-in to additional content. This content is a little bit
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
                 style="background-color: #F5A98C"
@@ -160,10 +160,10 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
-                style="background-color: #F5A98C"
+                style="background-color: lightcoral"
                 src="./delegates-logo/ip-white.png"
                 alt=""
               />
@@ -184,10 +184,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
-                style="background-color: #F5A98C"
+                style="background-color: lightcoral"
                 src="./delegates-logo/wto-white.png"
                 alt=""
               />
@@ -208,10 +208,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-lg">
               <img
                 class="d-block img-fluid"
-                style="background-color: #F5A98C"
+                style="background-color: lightcoral"
                 src="./delegates-logo/ccc-white.png"
                 alt=""
               />
