--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
+        <a class="navbar-brand mx-1" href="index.html"
+          ><img src="./static/amity-logo.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,7 +42,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -66,15 +68,49 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="./register/ip_register.html"
-                    >IP Application</a
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Messages
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Advisory Board</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Secretariat</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./register/ip_register.html"
+                    >Organising Committee</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="committees-gallery.html"
-                >Committees</a
-              >
+              <a class="nav-link" href="committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery</a>
@@ -91,7 +127,10 @@
     </nav>
 
     <main class="container">
-      <div class="p-4 p-md-5 mt-4 text-white rounded bg-dark">
+      <div
+        class="p-5 m-5 mx-auto text-grey rounded"
+        style="background-color: #f5a98c"
+      >
         <div class="col-md-6 px-0">
           <h1 class="display-4 font-italic">
             Title of a longer featured blog post
@@ -101,14 +140,14 @@
             quickly and efficiently about what’s most interesting in this post’s
             contents.
           </p>
-          <p class="lead mb-0">
-            <a href="#" class="text-white fw-bold">Continue reading...</a>
-          </p>
         </div>
       </div>
 
       <!-- Page Content -->
-      <div class="container page-top">
+      <div
+        class="container rounded mx-auto page-top p-5 m-5"
+        style="background-color: #f4f4f4"
+      >
         <div class="row">
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a href="./static/img-1.jpeg" class="fancybox" rel="ligthbox">
