--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"><img src="./static/amity-logo.png" alt=""></a>
+        <a class="navbar-brand mx-1" href="index.html"
+          ><img src="./static/amity-logo.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,14 +33,14 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div
           class="collapse navbar-collapse justify-content-end"
           id="navbarNavDropdown"
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">About Us</a>
+              <a class="nav-link text-white" href="./about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -64,7 +66,43 @@
                 </li>
                 <li>
                   <a class="dropdown-item" href="./register/ip_register.html"
-                    >IP Application</a
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Messages
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Advisory Board</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Secretariat</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./register/ip_register.html"
+                    >Organising Committee</a
                   >
                 </li>
               </ul>
@@ -75,9 +113,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="gallery.html"
-                >Gallery</a
-              >
+              <a class="nav-link text-white" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">AMIMUN Club</a>
@@ -210,89 +246,77 @@
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
       <div class="container marketing">
-        <h1 class="m-5 text-center">ABOUT US</h1>
+        <h1 class="m-5 text-center">MESSAGE FROM SECRETARY GENERAL</h1>
+        <div class="mt-5">
+          <div
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-lg h-md-250 position-relative"
+            style="background-color: #f4f4f4"
+          >
+            <div class="col p-4 d-flex flex-column position-static">
+              <p class="card-text mb-auto">
+                Dear Delegate, <br />
+                It is an absolute pleasure to invite you to the
+                <strong
+                  >Amity International Model United Nations (AMIMUN'20)</strong
+                >. The 9th edition of the AMIMUN Conference will be held at
+                Amity University, Uttar Pradesh from Friday, January 17th, to
+                Sunday, January 19th, 2020. With each passing edition, AMIMUN
+                has witnessed stratospheric growth, setting the bar for MUNs
+                within the Indian Circuit, and an International Base of
+                participants. By following the theme for AMIMUN'20 "Audere est
+                facere" which is Latin for "To Dare is to Do", we wish to
+                encourage the delegates to engage in debate that is
+                thought-provoking and will yield forth solutions to the pressing
+                issues in the world today. We believe that actions speak louder
+                than words, which is why when one makes bold decisions, the
+                results are electrifying. AMIMUN'20 is not only the perfect
+                place to display your debating and diplomatic prowess but also
+                ignite the zeal to dare and create change. This edition, we as
+                the Secretariat, will ensure your experience isn't just
+                restricted to a committee room but enhances the never-ending
+                process of learning. It is a platform which strives to enable
+                students from all over the world, so they may move towards a
+                future where they are then capable of achieving what others
+                wouldn't dare dream of. I would like to take this opportunity to
+                thank our Founder President Sir, our Faculty Coordinators, our
+                Partners and Sponsors for their relentless support for
+                AMIMUN'20, and making this Conference possible. On behalf of the
+                secretariat, I extend a warm invitation to all delegates and
+                hope this conference will be as productive for you as an
+                individual, as it will be for you as a delegate. For any queries
+                or concerns kindly feel free to reach out to us, we would be
+                glad to assist you. Let's Dare to Do'!
+              </p>
+
+              <p class="text-muted">
+                <br />
+                Sincerely,<br />
+                Siddhant Treasure<br />
+                Secretary-General<br />
+                Amity International Model United Nations 2020
+              </p>
+              <div class="mt-1">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-outline-secondary rounded"
+                >
+                  Read more
+                </button>
+              </div>
+            </div>
+            <div class="img-fluid col-auto d-none d-lg-block p-3 rounded">
+              <img class="rounded" src="./static/sg.jpg" alt="" />
+            </div>
+          </div>
+        </div>
         <!-- START THE FEATURETTES -->
-
-        <hr class="featurette-divider" />
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">
-              First featurette heading.
-              <span class="text-muted">It’ll blow your mind.</span>
-            </h2>
-            <p class="lead">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-              ligula porta felis euismod semper. Praesent commodo cursus magna,
-              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
-          <div class="col-md-5">
-            <img
-              class="d-block img-fluid"
-              src="./static/img-2-500x500.JPG"
-              alt=""
-            />
-          </div>
-        </div>
-
-        <hr class="featurette-divider" />
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">
-              Oh yeah, it’s that good.
-              <span class="text-muted">See for yourself.</span>
-            </h2>
-            <p class="lead">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-              ligula porta felis euismod semper. Praesent commodo cursus magna,
-              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <img
-              class="d-block img-fluid"
-              src="./static/img-6-500x500.jpeg"
-              alt=""
-            />
-          </div>
-        </div>
-
-        <hr class="featurette-divider" />
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">
-              And lastly, this one. <span class="text-muted">Checkmate.</span>
-            </h2>
-            <p class="lead">
-              Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id
-              ligula porta felis euismod semper. Praesent commodo cursus magna,
-              vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
-              commodo.
-            </p>
-          </div>
-          <div class="col-md-5">
-            <img
-              class="d-block img-fluid"
-              src="./static/img-3-500x500.JPG"
-              alt=""
-            />
-          </div>
-        </div>
-
-        <hr class="featurette-divider" />
-
         <!-- /END THE FEATURETTES -->
 
         <!-- Three columns of text below the carousel -->
         <h1 class="m-5 text-center">OUR COLLABORATIONS</h1>
         <div class="row text-center m-5">
           <div class="col-lg-4">
-            <img class="d-block img-fluid" src="./static/sp-1.png" alt="">
+            <img class="d-block img-fluid" src="./static/sp-1.png" alt="" />
 
             <!-- <h2>Heading</h2>
             <p>
