--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -426,7 +426,7 @@
 
         <hr class="my-4" />
 
-        <button class="w-100 btn btn-secondary btn-lg" type="submit">
+        <button class="w-100 btn btn-outline-secondary btn-lg" type="submit">
           Submit
         </button>
       </form>
